# vlm-scripts

./: .gitignore  LICENSE  README.md
huggingface/: README.md  base.py
huggingface/examples/: gemma_example.sh  gemma_example_simple.sh  qwen3_2b_example.sh
huggingface/models/LFM2-VL-450M/: run.py
huggingface/models/Qwen3-VL-2B-Instruct/: run.py
huggingface/models/gemma-3-4b-it/: run.py
llama-cpp/: README.md
llama-cpp/examples/: run_classify.sh  run_finetuned.sh  run_from_hf.sh  run_with_image.sh
scripts/: download-model.sh  uv.sh
tests/: __init__.py
transformers/: README.md  base.py  client.py  pyproject.toml
transformers/examples/: LFM2-VL-1.6B.sh  LFM2-VL-3B.sh  LFM2-VL-450M.sh  LFM2.5-VL-1.6B.sh  LFM2.5-VL-450M.sh  Qwen3-VL-2B-Instruct.sh  Qwen3-VL-4B-Instruct.sh  gemma-3-4b-it.sh  gemma-3-4b-pt.sh  gemma-4-E2B-it.sh  liquid_1.6b_example.sh  liquid_450m_example.sh  qwen3_4b_example.sh
transformers/models/LFM2-VL-1.6B/: run.py
transformers/models/LFM2-VL-3B/: run.py
transformers/models/LFM2-VL-450M/: run.py
transformers/models/LFM2.5-VL-1.6B/: run.py
transformers/models/LFM2.5-VL-450M/: run.py
transformers/models/Qwen3-VL-2B-Instruct/: run.py
transformers/models/Qwen3-VL-4B-Instruct/: run.py
transformers/models/gemma-3-4b-it/: run.py
transformers/models/gemma-3-4b-pt/: run.py
transformers/models/gemma-4-E2B-it/: run.py
transformers/scripts/: download_model.py
