[project]
name = "vlm-scripts"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "numpy<2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "peft>=0.18.1",
    "pillow>=10.0",
    "safetensors>=0.7.0",
    "torch==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch>=2.10.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "transformers==5.0.0; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "transformers>=5.1.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "torchvision==0.17.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torchvision>=0.26.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
]
